updated swagger annotation response codes
